Issue #6: Automatically saving profiles
Changed logmethod to reason.
Rearranged settings and grouped under headings.
html_writer is used for profile_table::col_request()
Remaining strings moved to tooL-excimer.php

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -64,8 +64,8 @@
             <td>{{#shortentext}} 11, {{sessionid}} {{/shortentext}}</td>
         </tr>
         <tr>
-            <th>Log method</th>
-            <td>{{#log_method_display}}{{logmethod}}{{/log_method_display}}</td>
+            <th>{{#str}} excimerfield_reason, tool_excimer {{/str}}</th>
+            <td>{{#reason_display}}{{reason}}{{/reason_display}}</td>
         </tr>
         <tr>
             <th>{{#str}} excimerfield_type, tool_excimer {{/str}}</th>
