--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -44,7 +44,7 @@
     {
         "id" : 3,
         "request" : "/my/index.php",
-        "sessionid" : "9842....",
+        "sessionid" : "9842abcdef",
         "scripttype" : 2,
         "created" : 1638244603,
         "duration" : 0.153,
@@ -66,7 +66,7 @@
         </tr>
         <tr>
             <th>{{#str}} excimerfield_sessionid, tool_excimer {{/str}}</th>
-            <td>{{#shortentext}} 11, {{sessionid}} {{/shortentext}}</td>
+            <td>{{sessionid}}...</td>
         </tr>
         <tr>
             <th>{{#str}} excimerfield_reason, tool_excimer {{/str}}</th>
