--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -30,14 +30,15 @@
     * request - The request url (without parameters)
     * sessionid - The session ID
     * userid - ID of the user who loaded the page
-    * type - The script type
+    * scripttype - The script type
     * created - Unix timestamp of profile creation
     * duration - Profile duration in seconds.
     * parameters - Parameter string
     * resposnecode - HTTP response code
     * cookies - Is cookies enabled?
     * buffering - Is buffering enabled?
-    * fullname - full nane of user represented by userid.
+    * fullname - Full nane of user represented by userid.
+    * userlink - Link to user's profile page, or null if no user.
 
     Example context (json):
     {
@@ -51,7 +52,8 @@
         "resposnecode" : 200,
         "cookies" : 1,
         "buffering" : 1,
-        "fullname" : "Admin User"
+        "fullname" : "Admin User",
+        "userlink" : "https://some.domain://user/profile?id=1'
     }
 }}
 
@@ -88,7 +90,8 @@
         </tr>
         <tr>
             <th>{{#str}} excimerfield_user, tool_excimer {{/str}}</th>
-            <td>{{fullname}}</td>
+            <td>{{#userlink}}<a href="{{userlink}}">{{fullname}}</a>{{/userlink}}
+                {{^userlink}}{{fullname}}{{/userlink}}</td>
         </tr>
         <tr>
             <th>{{#str}} excimerfield_responsecode, tool_excimer {{/str}}</th>
