Table cosmetic tweak

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -59,7 +59,7 @@
 
 <h4>Profile Details</h4>
 <div id="profile-stats">
-    <table class="table table-sm table-bordered">
+    <table class="flexible table table-striped table-sm table-hover generaltable generalbox w-auto">
         <tr>
             <th>{{#str}} field_request, tool_excimer {{/str}}</th>
             <td>{{request}}</td>
