Issue #47: Delete Profiles
Added ability to delete profiles.
A 'Delete All' button added to profile list page.
A trash can icon added to profile row to delete individual profiles.

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -58,6 +58,7 @@
 }}
 
 <h4>Profile Details</h4>
+<p>{{#delete_button_display}}{{/delete_button_display}}</p>
 <div id="profile-stats">
     <table class="flexible table table-striped table-sm table-hover generaltable generalbox w-auto">
         <tr>
