--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -58,7 +58,7 @@
 }}
 
 <h4>Profile Details</h4>
-<p>{{#delete_button_display}}{{/delete_button_display}}</p>
+<p>{{{delete_button}}}</p>
 <div id="profile-stats">
     <table class="flexible table table-striped table-sm table-hover generaltable generalbox w-auto">
         <tr>
