Issue #59: Cosmetic fixes
Some breadcrumb fixes.
Moved settings link to development/excimer
Changed delete.php to use require_sesskey().
Removed 'parameter' and 'referer' columns from profile tables.
Added 'table-sm' class to profile tables.
Response codes are displayed as badges.
Duration and created values have new formats.

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -96,7 +96,7 @@
         </tr>
         <tr>
             <th>{{#str}} field_responsecode, tool_excimer {{/str}}</th>
-            <td>{{responsecode}}</td>
+            <td>{{{responsecode}}}</td>
         </tr>
         <tr>
             <th>{{#str}} field_referer, tool_excimer {{/str}}</th>
