Add pathinfo to saved profiles #76
- Now records the full details for a pluginfile.php request so it can be
  reconstructed if needed from all the bits.
- Removed unused includes.
- Update request column format to be constructed from 'request +
  pathinfo + params (if get request)'
- Remove parameter column display from list, as this is no longer
  required.
- Add links for request and referer on profile page to make it easier to
  reproduce any idempotent GET requests.
- Removed wwwroot DISPLAY from referer field as it was a bit redundant
  and most of the referers are based on the current site. If anything
  was not (prefixed with wwwroot), this would use the full stored URL.
- Updated parameters display on profile page to show clearly what values
  were passed without the encoding required for browsers

Fix

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -27,13 +27,12 @@
 
     Context variables required for this template:
     * id - The id of the profile
-    * request - The request url (without parameters)
+    * request - The request url (with pathinfo and parameters)
     * sessionid - The session ID
     * userid - ID of the user who loaded the page
     * scripttype - The script type
     * created - Unix timestamp of profile creation
     * duration - Profile duration in seconds.
-    * parameters - Parameter string
     * resposnecode - HTTP response code
     * cookies - Is cookies enabled?
     * buffering - Is buffering enabled?
@@ -43,12 +42,11 @@
     Example context (json):
     {
         "id" : 3,
-        "request" : "/my/index.php",
+        "request" : "/my/index.php/another/deeper/path?time=day&duration=week",
         "sessionid" : "9842abcdef",
         "scripttype" : 2,
         "created" : 1638244603,
         "duration" : 0.153,
-        "paramters" : "time=day&duration=week",
         "resposnecode" : 200,
         "cookies" : 1,
         "buffering" : 1,
@@ -63,7 +61,7 @@
     <table class="flexible table table-striped table-sm table-hover generaltable generalbox w-auto">
         <tr>
             <th>{{#str}} field_request, tool_excimer {{/str}}</th>
-            <td>{{request}}</td>
+            <td>{{{request}}}</td>
         </tr>
         <tr>
             <th>{{#str}} field_sessionid, tool_excimer {{/str}}</th>
@@ -86,10 +84,6 @@
             <td>{{{duration}}}</td>
         </tr>
         <tr>
-            <th>{{#str}} field_parameters, tool_excimer {{/str}}</th>
-            <td>{{parameters}}</td>
-        </tr>
-        <tr>
             <th>{{#str}} field_user, tool_excimer {{/str}}</th>
             <td>{{#userlink}}<a href="{{userlink}}">{{fullname}}</a>{{/userlink}}
                 {{^userlink}}{{fullname}}{{/userlink}}</td>
@@ -97,10 +91,6 @@
         <tr>
             <th>{{#str}} field_responsecode, tool_excimer {{/str}}</th>
             <td>{{{responsecode}}}</td>
-        </tr>
-        <tr>
-            <th>{{#str}} field_referer, tool_excimer {{/str}}</th>
-            <td>{{referer}}</td>
         </tr>
         <tr>
             <th>{{#str}} field_cookies, tool_excimer {{/str}}</th>
