Fixed durarion html escaping

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -83,7 +83,7 @@
         </tr>
         <tr>
             <th>{{#str}} field_duration, tool_excimer {{/str}}</th>
-            <td>{{duration}}</td>
+            <td>{{{duration}}}</td>
         </tr>
         <tr>
             <th>{{#str}} field_parameters, tool_excimer {{/str}}</th>
