Issue #53: Store number of samples and profile data size.
Added numsamples and datasize to tool_excimer_profiles db.
displays on profile page.

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -84,6 +84,14 @@
             <td>{{{duration}}}</td>
         </tr>
         <tr>
+            <th>{{#str}} field_numsamples, tool_excimer {{/str}}</th>
+            <td>{{numsamples}}</td>
+        </tr>
+        <tr>
+            <th>{{#str}} field_datasize, tool_excimer {{/str}}</th>
+            <td>{{datasize}}</td>
+        </tr>
+        <tr>
             <th>{{#str}} field_user, tool_excimer {{/str}}</th>
             <td>{{#userlink}}<a href="{{userlink}}">{{fullname}}</a>{{/userlink}}
                 {{^userlink}}{{fullname}}{{/userlink}}</td>
