--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -61,7 +61,7 @@
     <table class="flexible table table-striped table-sm table-hover generaltable generalbox w-auto">
         <tr>
             <th>{{#str}} field_request, tool_excimer {{/str}}</th>
-            <td>{{{request}}}</td>
+            <td>{{{responsecode}}} {{method}} {{{request}}}</td>
         </tr>
         <tr>
             <th>{{#str}} field_sessionid, tool_excimer {{/str}}</th>
@@ -87,10 +87,6 @@
             <th>{{#str}} field_user, tool_excimer {{/str}}</th>
             <td>{{#userlink}}<a href="{{userlink}}">{{fullname}}</a>{{/userlink}}
                 {{^userlink}}{{fullname}}{{/userlink}}</td>
-        </tr>
-        <tr>
-            <th>{{#str}} field_responsecode, tool_excimer {{/str}}</th>
-            <td>{{{responsecode}}}</td>
         </tr>
         <tr>
             <th>{{#str}} field_cookies, tool_excimer {{/str}}</th>
