Add new fields to hold detected content type of the request #61
- Helper function to resolve most content types, can be extended if
  needed.
- Added single field to profile page listing all 3 levels of content
  type (value, key/extension and category)
- Added field under the type column on the list page, which was used for
  scripts and now displays both.

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -65,6 +65,16 @@
             <td>{{{responsecode}}} {{method}} {{{request}}}</td>
         </tr>
         <tr>
+            <th>{{#str}} field_contenttype, tool_excimer {{/str}}</th>
+            <td>
+                <span title="{{#str}} field_contenttypecategory, tool_excimer {{/str}}">{{contenttypecategory}}</span>
+                -
+                <span title="{{#str}} field_contenttypekey, tool_excimer {{/str}}">.{{contenttypekey}}</span>
+                -
+                <span title="{{#str}} field_contenttypevalue, tool_excimer {{/str}}">{{contenttypevalue}}</span>
+            </td>
+        </tr>
+        <tr>
             <th>{{#str}} field_sessionid, tool_excimer {{/str}}</th>
             <td>{{sessionid}}...</td>
         </tr>
