Issue #79: Add delete all for request button to profile details page.

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -57,7 +57,7 @@
 
 {{> core/tabtree}}
 <h4>Profile Details</h4>
-<p>{{{delete_button}}}</p>
+<p>{{{delete_button}}} {{{delete_all_button}}}</p>
 <div id="profile-stats">
     <table class="flexible table table-striped table-sm table-hover generaltable generalbox w-auto">
         <tr>
