Issue #15: Save partial profiles for long executing scripts.
Added field to record finishing time, or zero if unfinished.

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -91,6 +91,18 @@
             <td>{{#userdate}} {{created}}, {{#str}} strftimedaydatetime, langconfig {{/str}} {{/userdate}}</td>
         </tr>
         <tr>
+            <th>{{#str}} field_finished, tool_excimer {{/str}}</th>
+            <td>
+                {{#finished}}
+                    {{#userdate}} {{finished}}, {{#str}} strftimedaydatetime, langconfig {{/str}} {{/userdate}}
+                {{/finished}}
+                {{^finished}}
+                    {{#str}} didnotfinish, tool_excimer {{/str}}
+                {{/finished}}
+            </td>
+        </tr>
+        </tr>
+        <tr>
             <th>{{#str}} field_duration, tool_excimer {{/str}}</th>
             <td>{{{duration}}}</td>
         </tr>
