Issue #15: Save partial profiles for long executing scripts. (#107)
* Issue #15: Save partial profiles for long executing scripts.

Setup ExcimerTimer to call a function for every N seconds.
Added a setting to set N.
Saving a parital stores the record ID, so that subsequent saves will override it.
Uses a separate DB connection if inside a transaction.
Added field to record finishing time, or zero if unfinished.
Added default for long interval in case it is set too low.
Gracefully handle error when opening second db connection.

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -91,9 +91,15 @@
                     <td>{{#userdate}} {{created}}, {{#str}} strftimedaydatetime, langconfig {{/str}} {{/userdate}}</td>
                 </tr>
                 <tr>
-                    <th>{{#str}} field_user, tool_excimer {{/str}}</th>
-                    <td>{{#userlink}}<a href="{{userlink}}">{{fullname}}</a>{{/userlink}}
-                        {{^userlink}}{{fullname}}{{/userlink}}</td>
+                    <th>{{#str}} field_finished, tool_excimer {{/str}}</th>
+                    <td>
+                        {{#finished}}
+                            {{#userdate}} {{finished}}, {{#str}} strftimedaydatetime, langconfig {{/str}} {{/userdate}}
+                        {{/finished}}
+                        {{^finished}}
+                            {{#str}} didnotfinish, tool_excimer {{/str}}
+                        {{/finished}}
+                    </td>
                 </tr>
             </table>
         </div>
@@ -118,6 +124,11 @@
                 <tr>
                     <th>{{#str}} field_buffering, tool_excimer {{/str}}</th>
                     <td>{{#buffering}} {{#str}} yes, core_customfield {{/str}} {{/buffering}}{{^buffering}}{{#str}} no, core_customfield {{/str}}{{/buffering}}</td>
+                </tr>
+                <tr>
+                    <th>{{#str}} field_user, tool_excimer {{/str}}</th>
+                    <td>{{#userlink}}<a href="{{userlink}}">{{fullname}}</a>{{/userlink}}
+                        {{^userlink}}{{fullname}}{{/userlink}}</td>
                 </tr>
             </table>
         </div>
