Add DB read/write ops to the profile #124
- Add info to profile display

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -109,6 +109,10 @@
                     <th>{{#str}} field_numsamples, tool_excimer {{/str}}</th>
                     <td>{{numsamples}}</td>
                 </tr>
+                <tr>
+                    <th>{{#str}} field_dbreadwrites, tool_excimer {{/str}}</th>
+                    <td>{{dbreads}}/{{dbwrites}}</td>
+                </tr>
             </table>
         </div>
         <div class="">
