Add display to dbreplicareads field to profile

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -151,7 +151,10 @@
                     <th>{{#str}} field_versionhash, tool_excimer {{/str}}</th>
                     <td><span title="{{versionhash}}">{{#shortentext}} 20,{{versionhash}} {{/shortentext}}</span></td>
                 </tr>
-
+                <tr>
+                    <th>{{#str}} field_dbreplicareads, tool_excimer {{/str}}</th>
+                    <td>{{dbreplicareads}}</td>
+                </tr>
 
             </table>
         </div>
