--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -172,8 +172,8 @@
 <div id="details" style="min-height: 1.5rem; clear: both;">
 </div>
 
-<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/d3-flame-graph@4.0.6/dist/d3-flamegraph.min.js"></script>
+<script type="text/javascript" src="/admin/tool/excimer/lib/d3/d3.min.js"></script>
+<script type="text/javascript" src="/admin/tool/excimer/lib/d3-flame-graph/d3-flamegraph.min.js"></script>
 <script type="text/javascript">
 
 init();
