--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -132,7 +132,7 @@
                     <td>{{#buffering}} {{#str}} yes, core_customfield {{/str}} {{/buffering}}{{^buffering}}{{#str}} no, core_customfield {{/str}}{{/buffering}}</td>
                 </tr>
                 <tr>
-                    <th>{{#str}} field_user, tool_excimer {{/str}}</th>
+                    <th>{{#str}} field_userid, tool_excimer {{/str}}</th>
                     <td>{{#userlink}}<a href="{{userlink}}">{{fullname}}</a>{{/userlink}}
                         {{^userlink}}{{fullname}}{{/userlink}}</td>
                 </tr>
