--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -57,122 +57,14 @@
     }
 }}
 
-{{> core/tabtree}}
-<h3>{{{responsecode}}} {{method}} {{{request}}}</h3>
-<p>{{{delete_button}}} {{{delete_all_button}}}</p>
-
-<div id="profile-stats" class="container">
-    <div class="row">
-        <div class="">
-            <table class="flexible table table-striped table-sm table-hover generaltable generalbox w-auto">
-                <tr>
-                    <th>{{#str}} field_contenttype, tool_excimer {{/str}}</th>
-                        <td>
-                        <span title="{{#str}} field_contenttypecategory, tool_excimer {{/str}}">{{contenttypecategory}}</span>
-                        -
-                        <span title="{{#str}} field_contenttypekey, tool_excimer {{/str}}">.{{contenttypekey}}</span>
-                        -
-                        <span title="{{#str}} field_contenttypevalue, tool_excimer {{/str}}">{{contenttypevalue}}</span>
-                    </td>
-                </tr>
-
-                <tr>
-                    <th>{{#str}} field_sessionid, tool_excimer {{/str}}</th>
-                    <td>{{sessionid}}...</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_reason, tool_excimer {{/str}}</th>
-                    <td>{{#reason_display}}{{reason}}{{/reason_display}}</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_scripttype, tool_excimer {{/str}}</th>
-                    <td>{{#script_type_display}}{{scripttype}}{{/script_type_display}}</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_created, tool_excimer {{/str}}</th>
-                    <td>{{#userdate}} {{created}}, {{#str}} strftimedaydatetime, langconfig {{/str}} {{/userdate}}</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_finished, tool_excimer {{/str}}</th>
-                    <td>
-                        {{#finished}}
-                            {{#userdate}} {{finished}}, {{#str}} strftimedaydatetime, langconfig {{/str}} {{/userdate}}
-                        {{/finished}}
-                        {{^finished}}
-                            {{#str}} didnotfinish, tool_excimer {{/str}}
-                        {{/finished}}
-                    </td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_duration, tool_excimer {{/str}}</th>
-                    <td>{{{duration}}}</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_numsamples, tool_excimer {{/str}}</th>
-                    <td>{{numsamples}}</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_dbreadwrites, tool_excimer {{/str}}</th>
-                    <td>{{dbreads}}/{{dbwrites}}</td>
-                </tr>
-            </table>
-        </div>
-        <div class="">
-            <table class="flexible table table-striped table-sm table-hover generaltable generalbox w-auto">
-                <tr>
-                    <th>{{#str}} field_datasize, tool_excimer {{/str}}</th>
-                    <td>{{datasize}}</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_cookies, tool_excimer {{/str}}</th>
-                    <td>{{#cookies}} {{#str}} yes, core_customfield {{/str}} {{/cookies}}{{^cookies}}{{#str}} no, core_customfield {{/str}}{{/cookies}}</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_buffering, tool_excimer {{/str}}</th>
-                    <td>{{#buffering}} {{#str}} yes, core_customfield {{/str}} {{/buffering}}{{^buffering}}{{#str}} no, core_customfield {{/str}}{{/buffering}}</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_userid, tool_excimer {{/str}}</th>
-                    <td>{{#userlink}}<a href="{{userlink}}">{{fullname}}</a>{{/userlink}}
-                        {{^userlink}}{{fullname}}{{/userlink}}</td>
-                </tr>
-
-                <tr>
-                    <th>{{#str}} field_pid, tool_excimer {{/str}}</th>
-                    <td>{{pid}}</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_hostname, tool_excimer {{/str}}</th>
-                    <td>{{hostname}}</td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_useragent, tool_excimer {{/str}}</th>
-                    <td><span title="{{useragent}}">{{#shortentext}} 20,{{useragent}} {{/shortentext}}</span></td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_versionhash, tool_excimer {{/str}}</th>
-                    <td><span title="{{versionhash}}">{{#shortentext}} 20,{{versionhash}} {{/shortentext}}</span></td>
-                </tr>
-                <tr>
-                    <th>{{#str}} field_dbreplicareads, tool_excimer {{/str}}</th>
-                    <td>{{dbreplicareads}}</td>
-                </tr>
-
-            </table>
-        </div>
-    </div>
-</div>
-
 <h4>Profile Flame Graph</h4>
 
 <div id="loading">
     Loading...
 </div>
 
-<div id="chart" style="margin-top: 1rem;">
-</div>
-<div id="details" style="min-height: 1.5rem; clear: both;">
-</div>
+<div id="flamechart" style="margin-top: 1rem;"></div>
+<div id="flamedetails" style="min-height: 1.5rem; clear: both;"></div>
 
 <script type="text/javascript">
 
@@ -181,14 +73,14 @@ window.addEventListener('resize', _ => init());
 
 function init() {
 
-    let chart = document.getElementById('chart');
-    let details = document.getElementById("details");
+    let flamechart = document.getElementById('flamechart');
+    let flamedetails = document.getElementById("flamedetails");
 
-    const chartWidth = Math.max(chart.offsetWidth - 15, 500);
+    const chartWidth = Math.max(flamechart.offsetWidth - 15, 500);
 
     window.excimerChart = flamegraph();
     window.excimerChart.width(chartWidth);
-    window.excimerChart.setDetailsElement(details);
+    window.excimerChart.setDetailsElement(flamedetails);
 
     if (window.excimerData === undefined) {
         setLoading(true);
@@ -206,12 +98,12 @@ function init() {
 }
 
 function draw() {
-    let svg = document.querySelector('#chart svg');
+    let svg = document.querySelector('#flamechart svg');
     if (svg !== null) {
         svg.remove();
     }
-    //  Append SVG:
-    d3.select("#chart").datum(window.excimerData).call(window.excimerChart);
+    // Append SVG:
+    d3.select("#flamechart").datum(window.excimerData).call(window.excimerChart);
 }
 
 function setLoading(yn) {
