feat: add max memory usage field to be stored on profile save
Note: this might be inaccurate for CLI tasks if the profiles are automatically split up (since the maximum will carry over due to it running as part of the same task)

--- a/templates/profile.mustache
+++ b/templates/profile.mustache
@@ -115,6 +115,10 @@
                     <th>{{#str}} field_dbreadwrites, tool_excimer {{/str}}</th>
                     <td>{{dbreads}}/{{dbwrites}}</td>
                 </tr>
+                <tr>
+                    <th>{{#str}} field_memoryusagemax, tool_excimer {{/str}}</th>
+                    <td>{{memoryusagemax}}</td>
+                </tr>
             </table>
         </div>
         <div class="">
@@ -157,7 +161,6 @@
                     <th>{{#str}} field_dbreplicareads, tool_excimer {{/str}}</th>
                     <td>{{dbreplicareads}}</td>
                 </tr>
-
             </table>
         </div>
     </div>
