--- a/templates/profile.mustache
+++ b/templates/profile.mustache
@@ -15,9 +15,9 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template tool_excimer/profile_page
+    @template tool_excimer/profile
 
-    Markup for displaying a flame graph.
+    Markup for displaying the summary of the excimer profile
 
     Classes required for JS:
     * none
