--- a/templates/profile.mustache
+++ b/templates/profile.mustache
@@ -78,7 +78,7 @@
 
                 <tr>
                     <th>{{#str}} field_sessionid, tool_excimer {{/str}}</th>
-                    <td>{{sessionid}}...</td>
+                    <td>{{sessionid}}…</td>
                 </tr>
                 <tr>
                     <th>{{#str}} field_reason, tool_excimer {{/str}}</th>
@@ -109,7 +109,7 @@
                 </tr>
                 <tr>
                     <th>{{#str}} field_numsamples, tool_excimer {{/str}}</th>
-                    <td>{{numsamples}}</td>
+                    <td>{{#str}} field_numsamples_value, tool_excimer, { "samples": {{numsamples}}, "samplerate": {{samplerate}} } {{/str}}</td>
                 </tr>
                 <tr>
                     <th>{{#str}} field_dbreadwrites, tool_excimer {{/str}}</th>
