Issue #231: Change template to get strings from core_moodle instead of core_customfield.

--- a/templates/profile.mustache
+++ b/templates/profile.mustache
@@ -129,11 +129,11 @@
                 </tr>
                 <tr>
                     <th>{{#str}} field_cookies, tool_excimer {{/str}}</th>
-                    <td>{{#cookies}} {{#str}} yes, core_customfield {{/str}} {{/cookies}}{{^cookies}}{{#str}} no, core_customfield {{/str}}{{/cookies}}</td>
+                    <td>{{#cookies}} {{#str}} yes, core_moodle {{/str}} {{/cookies}}{{^cookies}}{{#str}} no, core_moodle {{/str}}{{/cookies}}</td>
                 </tr>
                 <tr>
                     <th>{{#str}} field_buffering, tool_excimer {{/str}}</th>
-                    <td>{{#buffering}} {{#str}} yes, core_customfield {{/str}} {{/buffering}}{{^buffering}}{{#str}} no, core_customfield {{/str}}{{/buffering}}</td>
+                    <td>{{#buffering}} {{#str}} yes, core_moodle {{/str}} {{/buffering}}{{^buffering}}{{#str}} no, core_moodle {{/str}}{{/buffering}}</td>
                 </tr>
                 <tr>
                     <th>{{#str}} field_userid, tool_excimer {{/str}}</th>
