Issue #252: Fix syntax errors in mustache sample contexts.

--- a/templates/flamegraph.mustache
+++ b/templates/flamegraph.mustache
@@ -30,7 +30,7 @@
 
     Example context (json):
     {
-        "id" : 3,
+        "id" : 3
     }
 }}
 
@@ -43,7 +43,7 @@
 <div id="flamechart" style="margin-top: 1rem;"></div>
 <div id="flamedetails" style="min-height: 1.5rem; clear: both;"></div>
 
-<script type="text/javascript">
+<script>
 
 init();
 window.addEventListener('resize', _ => init());
