--- a/templates/memoryusagegraph.mustache
+++ b/templates/memoryusagegraph.mustache
@@ -30,7 +30,7 @@
 
     Example context (json):
     {
-        "id" : 3,
+        "id" : 3
     }
 }}
 
@@ -43,29 +43,7 @@
 <div id="memoryusagegraph" style="margin-top: 1rem;"></div>
 <div id="memoryusagedetails" style="min-height: 1.5rem; clear: both;"></div>
 
-
-<style>
-.memory-usage-line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 2px;
-}
-div.tooltip {
-    position: absolute;
-    text-align: left;
-    width: 150px;
-    height: 40px;
-    padding: 5px 10px;
-    font: 12px sans-serif;
-    background: black;
-    color: white;
-    border: 0px;
-    border-radius: 8px;
-    pointer-events: none;
-}
-</style>
-
-<script type="text/javascript">
+<script>
 
 /**
  * Generate the display for file size
