--- a/templates/profile.mustache
+++ b/templates/profile.mustache
@@ -52,7 +52,7 @@
         "cookies" : 1,
         "buffering" : 1,
         "fullname" : "Admin User",
-        "userlink" : "https://some.domain://user/profile?id=1',
+        "userlink" : "https://some.domain://user/profile?id=1",
         "tabs" : "<ul></ul>"
     }
 }}
