--- a/templates/profile.mustache
+++ b/templates/profile.mustache
@@ -59,7 +59,7 @@
 
 {{> core/tabtree}}
 <h3>{{{responsecode}}} {{method}} {{{request}}}</h3>
-<p>{{{delete_button}}} {{{delete_all_button}}}</p>
+<p>{{{delete_button}}} {{{delete_all_button}}} {{{profile_lock_button}}}</p>
 
 <div id="profile-stats" class="container">
     <div class="row">
@@ -160,6 +160,10 @@
                 <tr>
                     <th>{{#str}} field_dbreplicareads, tool_excimer {{/str}}</th>
                     <td>{{dbreplicareads}}</td>
+                </tr>
+                <tr>
+                    <th>Lock reason</th>
+                    <td>{{lockreason}}</td>
                 </tr>
             </table>
         </div>
