Fixed lock logic bug

--- a/templates/profile.mustache
+++ b/templates/profile.mustache
@@ -61,10 +61,12 @@
 <h3>{{{responsecode}}} {{method}} {{{request}}}</h3>
 <p>{{{delete_button}}} {{{delete_all_button}}} {{{profile_lock_button}}}</p>
 
-<div class="alert alert-info alert-block">
-    <h4>{{#str}} locked, tool_excimer {{/str}}</h4>
-    {{{lockreason}}}
-</div>
+{{#lockreason}}
+    <div class="alert alert-info alert-block">
+        <h4>{{#str}} locked, tool_excimer {{/str}}</h4>
+        {{{lockreason}}}
+    </div>
+{{/lockreason}}
 <div id="profile-stats" class="container">
     <div class="row">
         <div class="">
